# ustc-2023-robogame-cyberminer

./: CMakeLists.txt  launch.cpp  main.cpp  multithread.cpp  ranging.cpp  serial.cpp  serial_demo.py
source/Inc/: avoid_obstacle.hpp  detect_color.hpp  distance.hpp  perspective.hpp  ranging.hpp  serial_connect.hpp  take_picture.hpp  white_balance.hpp
source/Src/: adjust.cpp  avoid_obstacle.cpp  detect_color.cpp  distance.cpp  perspective.cpp  ranging.cpp  serial_connect.cpp  take_pictures.cpp  white_balance.cpp
